--- a/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.html
+++ b/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.html
@@ -186,7 +186,9 @@
         [pageSizeOptions]="[5, 50, 100]">
       </mat-paginator>
     </mat-tab>
-  
+
+
+    
     <!-- TAB 2: ללא תרופות ברשימה -->
     <mat-tab label="ללא תרופות ברשימה">
       <div style="display:flex; align-items:center; gap:12px; margin:8px 0;">
@@ -232,6 +234,63 @@
         [pageSizeOptions]="[10, 50, 100]">
       </mat-paginator>
     </mat-tab>
+
+<!-- TAB 3: ספירה לפי נותן התרופה × קבוצת זמן -->
+<mat-tab label="לפי נותן התרופה (ספירה לפי TimeGroup)">
+  <div style="display:flex; align-items:center; gap:12px; margin:8px 0;">
+    <!-- Export button appears only if there is data -->
+    <button
+      mat-stroked-button
+      (click)="exportGiveOrderMatrix()"
+      *ngIf="giveOrderMatrixData?.data?.length">
+      <mat-icon>download</mat-icon>
+      יצוא אקסל
+    </button>
+
+    <mat-form-field appearance="outline" style="margin-inline-start:auto;">
+      <mat-label>חיפוש</mat-label>
+      <input
+        matInput
+        (keyup)="applyGiveOrderMatrixFilter($event)"
+        placeholder="חפש לפי שדות הטבלה" />
+    </mat-form-field>
+  </div>
+
+  <mat-table
+    [dataSource]="giveOrderMatrixData"
+    matSort
+    #matrixSort="matSort"
+    dir="rtl"
+    class="mat-elevation-z8">
+
+    <!-- Dynamic columns: giveOrderName, each TimeGroup, total -->
+    <ng-container *ngFor="let col of giveOrderMatrixColumns" [matColumnDef]="col">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <ng-container [ngSwitch]="col">
+          <ng-container *ngSwitchCase="'giveOrderName'">נותן התרופה</ng-container>
+          <ng-container *ngSwitchCase="'total'">סה״כ</ng-container>
+          <ng-container *ngSwitchDefault>{{ col }}</ng-container>
+        </ng-container>
+      </mat-header-cell>
+
+      <mat-cell *matCellDef="let row">
+        {{ row[col] }}
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="giveOrderMatrixColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: giveOrderMatrixColumns"></mat-row>
+  </mat-table>
+
+  <mat-paginator
+    #matrixPaginator
+    [length]="giveOrderMatrixData.data.length || 0"
+    [pageSize]="10"
+    [pageSizeOptions]="[10, 25, 50, 100]">
+  </mat-paginator>
+</mat-tab>
+
+
   </mat-tab-group>
   
 </div>
