--- a/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.html
+++ b/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.html
@@ -236,15 +236,23 @@
     </mat-tab>
 
 <!-- TAB 3: ספירה לפי נותן התרופה × קבוצת זמן -->
+<!-- TAB 3: ספירה לפי נותן התרופה × קבוצת זמן -->
 <mat-tab label="לפי נותן התרופה (ספירה לפי TimeGroup)">
   <div style="display:flex; align-items:center; gap:12px; margin:8px 0;">
-    <!-- Export button appears only if there is data -->
+
+    <!-- Export (table only) -->
     <button
+      *ngIf="!showMatrixGraph && giveOrderMatrixData?.data?.length"
       mat-stroked-button
-      (click)="exportGiveOrderMatrix()"
-      *ngIf="giveOrderMatrixData?.data?.length">
+      (click)="exportGiveOrderMatrix()">
       <mat-icon>download</mat-icon>
       יצוא אקסל
+    </button>
+
+    <!-- Table/Graph toggle -->
+    <button mat-stroked-button (click)="toggleMatrixGraph()">
+      <mat-icon>{{ showMatrixGraph ? 'table_chart' : 'bar_chart' }}</mat-icon>
+      {{ showMatrixGraph ? 'הצג טבלה' : 'הצג גרף (Valid%)' }}
     </button>
 
     <mat-form-field appearance="outline" style="margin-inline-start:auto;">
@@ -256,47 +264,57 @@
     </mat-form-field>
   </div>
 
+  <!-- Graph view (Valid% by GiveOrderName) -->
+  <div *ngIf="showMatrixGraph" style="height:860px; margin-top:12px;">
+    <h3 style="margin:0 0 8px;">Valid% לפי נותן התרופה</h3>
+    <div *ngIf="!giveOrderMatrixData?.data?.length" style="opacity:.7;">אין נתונים להצגה</div>
+    <canvas #matrixCanvas style="width:100%; height:100%;"></canvas>
+  </div>
+
+  <!-- Table view -->
   <mat-table
-  [dataSource]="giveOrderMatrixData"
-  matSort
-  #matrixSort="matSort"
-  dir="rtl"
-  class="mat-elevation-z8">
+    *ngIf="!showMatrixGraph"
+    [dataSource]="giveOrderMatrixData"
+    matSort
+    #matrixSort="matSort"
+    dir="rtl"
+    class="mat-elevation-z8">
 
-  <ng-container *ngFor="let col of giveOrderMatrixColumns" [matColumnDef]="col">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>
-      <ng-container [ngSwitch]="col">
-        <ng-container *ngSwitchCase="'giveOrderName'">נותן התרופה</ng-container>
-        <ng-container *ngSwitchCase="'total'">סה״כ</ng-container>
-        <ng-container *ngSwitchCase="'validPercent'">Valid%</ng-container>
-        <ng-container *ngSwitchDefault>{{ col }}</ng-container>
-      </ng-container>
-    </mat-header-cell>
-
-    <mat-cell *matCellDef="let row">
-      <ng-container [ngSwitch]="col">
-        <ng-container *ngSwitchCase="'validPercent'">
-          {{ row[col] | number:'1.0-1' }}%
+    <ng-container *ngFor="let col of giveOrderMatrixColumns" [matColumnDef]="col">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <ng-container [ngSwitch]="col">
+          <ng-container *ngSwitchCase="'giveOrderName'">נותן התרופה</ng-container>
+          <ng-container *ngSwitchCase="'total'">סה״כ</ng-container>
+          <ng-container *ngSwitchCase="'validPercent'">Valid%</ng-container>
+          <ng-container *ngSwitchDefault>{{ col }}</ng-container>
         </ng-container>
-        <ng-container *ngSwitchDefault>
-          {{ row[col] }}
+      </mat-header-cell>
+
+      <mat-cell *matCellDef="let row">
+        <ng-container [ngSwitch]="col">
+          <ng-container *ngSwitchCase="'validPercent'">
+            {{ row[col] | number:'1.0-1' }}%
+          </ng-container>
+          <ng-container *ngSwitchDefault>
+            {{ row[col] }}
+          </ng-container>
         </ng-container>
-      </ng-container>
-    </mat-cell>
-  </ng-container>
+      </mat-cell>
+    </ng-container>
 
-  <mat-header-row *matHeaderRowDef="giveOrderMatrixColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: giveOrderMatrixColumns"></mat-row>
-</mat-table>
-
+    <mat-header-row *matHeaderRowDef="giveOrderMatrixColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: giveOrderMatrixColumns"></mat-row>
+  </mat-table>
 
   <mat-paginator
+    *ngIf="!showMatrixGraph"
     #matrixPaginator
     [length]="giveOrderMatrixData.data.length || 0"
     [pageSize]="5"
     [pageSizeOptions]="[10, 25, 50, 100]">
   </mat-paginator>
 </mat-tab>
+
 
 
   </mat-tab-group>
