--- a/src/app/chameleon-reports/geriatrics-drugs-on-vacation-component/geriatrics-drugs-on-vacation-component.component.html
+++ b/src/app/chameleon-reports/geriatrics-drugs-on-vacation-component/geriatrics-drugs-on-vacation-component.component.html
@@ -21,7 +21,7 @@
               <!-- Multi-Select Dropdown for Name -->
               <mat-form-field class="filter-field">
                 <mat-label class="filters">מחלקה</mat-label>
-                <mat-select [formControl]="getFormControl('Name')" multiple>
+                <mat-select [formControl]="getFormControl('name')" multiple>
                   <mat-option *ngFor="let name of uniqueNames" [value]="name">
                     {{ name }}
                   </mat-option>
@@ -30,7 +30,7 @@
   
               <!-- Other Filters -->
               <ng-container *ngFor="let column of columns">
-                <mat-form-field class="filter-field" *ngIf="column !== 'Name'">
+                <mat-form-field class="filter-field" *ngIf="column !== 'name'">
                   <mat-label class="filters">{{ getColumnLabel(column) }}</mat-label>
                   <input matInput [formControl]="getFormControl(column)" class="filter-input" />
                 </mat-form-field>
